[Refactor] 스크롤에 따라 fade in하는 스타일 - aos 라이브러리로 변경

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/theme.css" />
     <link rel="stylesheet" href="/css/theme-dark.css" media="(prefers-color-scheme: dark)" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
 
   <body>
@@ -75,7 +76,7 @@
     <main>
       <!-- intro 시작 -->
 
-      <section class="container pt mt fade" id="intro">
+      <section class="container pt mt" data-aos="fade-left" id="intro">
         <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">intro</h2>
         <div style="display: flex; justify-content: space-evenly; flex-wrap: wrap">
           <div class="section-desc fonsiz-ori color-basic-opac letsp-sm ws-xs mt-2 mb-4">
@@ -107,7 +108,7 @@
       </section>
       <!-- intro 끝 -->
       <!-- Project 시작 -->
-      <section class="container pt mt" id="project">
+      <section class="container pt mt" data-aos="fade-left" id="project">
         <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">Project</h2>
         <div class="section-desc fonsiz-sm color-basic-opac letsp-sm ws-xs mt-2 mb-4">
           저는 깔끔한 코드, 읽기 쉬운 디자인패턴을 마음속에 담고 프로젝트를 끝까지 하기 위해 노력합니다.
@@ -181,7 +182,8 @@
                       <span class="text-muted" data-bs-toggle="modal" data-bs-target="#Modal1">
                         <i class="bi bi-file-earmark-slides"></i>
                         <div
-                          class="modal fade"
+                          class="modal"
+                          data-aos="fade-left"
                           id="Modal1"
                           tabindex="-1"
                           aria-labelledby="Modal1Label"
@@ -239,7 +241,7 @@
           </div>
         </div>
       </section>
-      <section class="container pt fade" id="toyProject">
+      <section class="container pt" data-aos="fade-left" id="toyProject">
         <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">Toy Project</h2>
         <div class="section-desc fonsiz-sm color-basic-opac letsp-sm ws-xs mt-2 mb-4">
           업무 외에 배우고 싶은 기술, 언어를 사용해보며 나아가고 있습니다.
@@ -287,7 +289,8 @@
                       <span class="text-muted" data-bs-toggle="modal" data-bs-target="#Modal2">
                         <i class="bi bi-file-earmark-slides"></i>
                         <div
-                          class="modal fade"
+                          class="modal"
+                          data-aos="fade-left"
                           id="Modal2"
                           tabindex="-1"
                           aria-labelledby="Modal2Label"
@@ -340,7 +343,7 @@
         </div>
       </section>
       <!-- 연차별 업무 진행-->
-      <section class="container pt fade" id="annualizedWork">
+      <section class="container pt" data-aos="fade-left" id="annualizedWork">
         <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">Annualized work</h2>
         <div class="section-desc fonsiz-sm color-basic-opac letsp-sm ws-xs mt-2 mb-4">
           연차별로 중점적으로 했던 업무를 한줄로 간략히 정리해보았습니다.
@@ -412,7 +415,7 @@
       </section>
       <!-- Project 끝 -->
       <!-- Awards 시작 -->
-      <section class="container pt mt fade" id="awards">
+      <section class="container pt mt" data-aos="fade-left" id="awards">
         <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">Awards</h2>
         <div class="section-desc fonsiz-sm color-basic-opac letsp-sm ws-xs mt-2 mb-4">
           다양한 사람들과 협업을 통해서 함께 공동의 목표를 성취해 나가는 것에 관심이 많습니다. 실패를 겁내지 않고
@@ -456,7 +459,8 @@
                       </span>
                       <!-- Modal 시작 -->
                       <div
-                        class="modal fade"
+                        class="modal"
+                        data-aos="fade-left"
                         id="Award_2021_1"
                         tabindex="-1"
                         aria-labelledby="Award_2021_1Label"
@@ -528,7 +532,8 @@
                       </span>
                       <!-- Modal 시작 -->
                       <div
-                        class="modal fade"
+                        class="modal"
+                        data-aos="fade-left"
                         id="myAwardModal1"
                         tabindex="-1"
                         aria-labelledby="myAwardModal1Label"
@@ -613,7 +618,8 @@
                       </span>
                       <!-- Modal 시작 -->
                       <div
-                        class="modal fade"
+                        class="modal"
+                        data-aos="fade-left"
                         id="myAwardModal2"
                         tabindex="-1"
                         aria-labelledby="myAwardModal2Label"
@@ -665,7 +671,7 @@
       </section>
       <!-- Awards 끝-->
       <!-- Stack 시작-->
-      <section class="container pt mt mb-5 fade" id="stacks">
+      <section class="container pt mt mb-5" data-aos="fade-left" id="stacks">
         <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">Stacks</h2>
         <div class="section-desc fonsiz-sm color-basic-opac letsp-sm ws-xs mt-2 mb-4">
           T자형 지식을 추구합니다. 다만 지금은 수직, 수평적인 지식을 둘다 키워야하는 주니어로써 다양한 기술, 언어를
@@ -901,7 +907,7 @@
       </section>
       <!-- Stack 끝-->
       <!-- certificate 시작-->
-      <section class="container pt mt fade" id="certificate">
+      <section class="container pt mt" data-aos="fade-left" id="certificate">
         <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">Certificate</h2>
         <div class="section-desc fonsiz-sm color-basic-opac letsp-sm ws-xs mt-2 mb-4">
           자격증이 실력의 척도가 될 수는 없습니다. 하지만 관심과 꾸준함에 대한 척도는 될 수 있다고 생각합니다.
@@ -943,7 +949,8 @@
                       </span>
                       <!-- Modal 시작 -->
                       <div
-                        class="modal fade"
+                        class="modal"
+                        data-aos="fade-left"
                         id="certificateModel_1"
                         tabindex="-1"
                         aria-labelledby="certificateModel_1Label"
@@ -1008,7 +1015,8 @@
                       </span>
                       <!-- Modal 시작 -->
                       <div
-                        class="modal fade"
+                        class="modal"
+                        data-aos="fade-left"
                         id="certificateModel_2"
                         tabindex="-1"
                         aria-labelledby="certificateModel_2Label"
@@ -1068,7 +1076,8 @@
                       </span>
                       <!-- Modal 시작 -->
                       <div
-                        class="modal fade"
+                        class="modal"
+                        data-aos="fade-left"
                         id="certificateModel_3"
                         tabindex="-1"
                         aria-labelledby="certificateModel_3Label"
@@ -1116,14 +1125,14 @@
       </section>
       <!-- certificate 끝  -->
       <!-- contact 시작  -->
-      <section class="container pt mt fade" id="contact">
+      <section class="container pt mt" data-aos="fade-left" id="contact">
         <div class="row">
           <div class="col-lg-7 mx-auto text-center mb-5">
             <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">Contact</h2>
           </div>
         </div>
       </section>
-      <section class="container backimg fade">
+      <section class="container backimg" data-aos="fade-left">
         <div class="name-card d-flex justify-content-center">
           <div class="contact-body shadow">
             <div class="text-center mb-4">
@@ -1200,7 +1209,14 @@
               >Creative Commons License</a
             >
           </div>
-          <div class="modal fade" id="myModal3" tabindex="-1" aria-labelledby="myModal3Label" aria-hidden="true">
+          <div
+            class="modal"
+            data-aos="fade-left"
+            id="myModal3"
+            tabindex="-1"
+            aria-labelledby="myModal3Label"
+            aria-hidden="true"
+          >
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
@@ -1239,6 +1255,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="/js/scripts.js"></script>
   </body>
 </html>
