[New feature] GUI 기반 통계 플랫폼
- 내용 업데이트

--- a/index.html
+++ b/index.html
@@ -127,6 +127,32 @@
                 </thead>
                 <tbody>
                   <tr>
+                    <th class="table-title" scope="col">GUI 기반 통계 플랫폼 : HyperData</th>
+                    <td>
+                      <div>[티맥스] 통계 플랫폼 : Jupyter notebook 상에서 동작하는 GUI 기반 통계,EDA 플랫폼</div>
+                      <div>#Statistic #Visualization #Ipython #python package</div>
+                      <div>
+                        <span class="badge bg-inprogress">In Progress</span>
+                        <span class="badge bg-grey">Python</span>
+                        <span class="badge bg-grey">Jupyter</span>
+                        <span class="badge bg-grey">Docker</span>
+                        <span class="badge bg-grey">Html</span>
+                        <span class="badge bg-grey">Javascript</span>
+                        <span class="badge bg-grey">Css</span>
+                      </div>
+                    </td>
+                    <td class="text-center">
+                      <div class="">( 21/03~ current)</div>
+                      <div class="progress">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 100%">
+                          <span class="progress-desc">개발중</span>
+                        </div>
+                      </div>
+                      <div class="progress-desc">프론트 앤드, 파이썬 통계 담당</div>
+                    </td>
+                  </tr>
+                  <tr></tr>
+                  <tr>
                     <th class="table-title" scope="col">데이터 시각화 서비스 : HyperData</th>
                     <td>
                       <div>[티맥스] 시각화 대시보드 : 오픈소스 라이브러리를 이용한 시각화 대시보드</div>
