[Bug fix] aos 라이브러리로 인한 버그 수정
- 모달창이 aos와 충돌하여 생기는 버그 수정
- scroll 위치와 모달창의 선언스크롤이 달라서 생기는 버그로 추정

--- a/index.html
+++ b/index.html
@@ -207,14 +207,7 @@
                     <td class="text-center">
                       <span class="text-muted" data-bs-toggle="modal" data-bs-target="#Modal1">
                         <i class="bi bi-file-earmark-slides"></i>
-                        <div
-                          class="modal"
-                          data-aos="fade-left"
-                          id="Modal1"
-                          tabindex="-1"
-                          aria-labelledby="Modal1Label"
-                          aria-hidden="true"
-                        >
+                        <div class="modal" id="Modal1" tabindex="-1" aria-labelledby="Modal1Label" aria-hidden="true">
                           <div class="modal-dialog">
                             <div class="modal-content">
                               <div class="modal-header">
@@ -314,14 +307,7 @@
                     <td class="text-center">
                       <span class="text-muted" data-bs-toggle="modal" data-bs-target="#Modal2">
                         <i class="bi bi-file-earmark-slides"></i>
-                        <div
-                          class="modal"
-                          data-aos="fade-left"
-                          id="Modal2"
-                          tabindex="-1"
-                          aria-labelledby="Modal2Label"
-                          aria-hidden="true"
-                        >
+                        <div class="modal" id="Modal2" tabindex="-1" aria-labelledby="Modal2Label" aria-hidden="true">
                           <div class="modal-dialog">
                             <div class="modal-content">
                               <div class="modal-header">
@@ -348,6 +334,8 @@
                                     target="_blank"
                                     >GitHub</a
                                   >
+                                  <br />홈페이지 :
+                                  <a href="https://dr-folio.github.io/" target="_blank">Go page</a>
                                 </p>
                               </div>
                               <div class="modal-footer">
@@ -486,7 +474,6 @@
                       <!-- Modal 시작 -->
                       <div
                         class="modal"
-                        data-aos="fade-left"
                         id="Award_2021_1"
                         tabindex="-1"
                         aria-labelledby="Award_2021_1Label"
@@ -559,7 +546,6 @@
                       <!-- Modal 시작 -->
                       <div
                         class="modal"
-                        data-aos="fade-left"
                         id="myAwardModal1"
                         tabindex="-1"
                         aria-labelledby="myAwardModal1Label"
@@ -645,7 +631,6 @@
                       <!-- Modal 시작 -->
                       <div
                         class="modal"
-                        data-aos="fade-left"
                         id="myAwardModal2"
                         tabindex="-1"
                         aria-labelledby="myAwardModal2Label"
@@ -976,7 +961,6 @@
                       <!-- Modal 시작 -->
                       <div
                         class="modal"
-                        data-aos="fade-left"
                         id="certificateModel_1"
                         tabindex="-1"
                         aria-labelledby="certificateModel_1Label"
@@ -1042,7 +1026,6 @@
                       <!-- Modal 시작 -->
                       <div
                         class="modal"
-                        data-aos="fade-left"
                         id="certificateModel_2"
                         tabindex="-1"
                         aria-labelledby="certificateModel_2Label"
@@ -1103,7 +1086,6 @@
                       <!-- Modal 시작 -->
                       <div
                         class="modal"
-                        data-aos="fade-left"
                         id="certificateModel_3"
                         tabindex="-1"
                         aria-labelledby="certificateModel_3Label"
