[New feature] scroll fade in 기능 변경
- aos 라이브러리 -> intersection observer api로 변경
- link hover css 수정 적용

--- a/index.html
+++ b/index.html
@@ -49,22 +49,22 @@
         <div class="collapse navbar-collapse sticky-fixed" id="navbarNav">
           <ul class="navbar-nav me-auto">
             <li class="nav-item">
-              <a class="nav-link click-alarm" href="#intro">intro</a>
+              <a class="nav-link click-alarm fancy-link" href="#intro">intro</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link click-alarm" href="#project">Project</a>
+              <a class="nav-link click-alarm fancy-link" href="#project">Project</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link click-alarm" href="#awards">Awards</a>
+              <a class="nav-link click-alarm fancy-link" href="#awards">Awards</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link click-alarm" href="#stacks">Stacks</a>
+              <a class="nav-link click-alarm fancy-link" href="#stacks">Stacks</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link click-alarm" href="#certificate">Certificate</a>
+              <a class="nav-link click-alarm fancy-link" href="#certificate">Certificate</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link click-alarm" href="#contact">Contact</a>
+              <a class="nav-link click-alarm fancy-link" href="#contact">Contact</a>
             </li>
           </ul>
           <form class="d-flex"></form>
@@ -76,7 +76,7 @@
     <main>
       <!-- intro 시작 -->
 
-      <section class="container pt mt" data-aos="fade-left" id="intro">
+      <section class="container pt mt fade-class" id="intro">
         <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">intro</h2>
         <div style="display: flex; justify-content: space-evenly; flex-wrap: wrap">
           <div class="section-desc fonsiz-ori color-basic-opac letsp-sm ws-xs mt-2 mb-4">
@@ -108,7 +108,7 @@
       </section>
       <!-- intro 끝 -->
       <!-- Project 시작 -->
-      <section class="container pt mt" data-aos="fade-left" id="project">
+      <section class="container pt mt fade-class" id="project">
         <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">Project</h2>
         <div class="section-desc fonsiz-sm color-basic-opac letsp-sm ws-xs mt-2 mb-4">
           저는 깔끔한 코드, 읽기 쉬운 디자인패턴을 마음속에 담고 프로젝트를 끝까지 하기 위해 노력합니다.
@@ -260,7 +260,7 @@
           </div>
         </div>
       </section>
-      <section class="container pt" data-aos="fade-left" id="toyProject">
+      <section class="container pt fade-class" id="toyProject">
         <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">Toy Project</h2>
         <div class="section-desc fonsiz-sm color-basic-opac letsp-sm ws-xs mt-2 mb-4">
           업무 외에 배우고 싶은 기술, 언어를 사용해보며 나아가고 있습니다.
@@ -357,7 +357,7 @@
         </div>
       </section>
       <!-- 연차별 업무 진행-->
-      <section class="container pt" data-aos="fade-left" id="annualizedWork">
+      <section class="container pt fade-class" id="annualizedWork">
         <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">Annualized work</h2>
         <div class="section-desc fonsiz-sm color-basic-opac letsp-sm ws-xs mt-2 mb-4">
           연차별로 중점적으로 했던 업무를 한줄로 간략히 정리해보았습니다.
@@ -429,7 +429,7 @@
       </section>
       <!-- Project 끝 -->
       <!-- Awards 시작 -->
-      <section class="container pt mt" data-aos="fade-left" id="awards">
+      <section class="container pt mt fade-class" id="awards">
         <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">Awards</h2>
         <div class="section-desc fonsiz-sm color-basic-opac letsp-sm ws-xs mt-2 mb-4">
           다양한 사람들과 협업을 통해서 함께 공동의 목표를 성취해 나가는 것에 관심이 많습니다. 실패를 겁내지 않고
@@ -682,7 +682,7 @@
       </section>
       <!-- Awards 끝-->
       <!-- Stack 시작-->
-      <section class="container pt mt mb-5" data-aos="fade-left" id="stacks">
+      <section class="container pt mt mb-5 fade-class" id="stacks">
         <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">Stacks</h2>
         <div class="section-desc fonsiz-sm color-basic-opac letsp-sm ws-xs mt-2 mb-4">
           T자형 지식을 추구합니다. 다만 지금은 수직, 수평적인 지식을 둘다 키워야하는 주니어로써 다양한 기술, 언어를
@@ -918,7 +918,7 @@
       </section>
       <!-- Stack 끝-->
       <!-- certificate 시작-->
-      <section class="container pt mt" data-aos="fade-left" id="certificate">
+      <section class="container pt mt fade-class" id="certificate">
         <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">Certificate</h2>
         <div class="section-desc fonsiz-sm color-basic-opac letsp-sm ws-xs mt-2 mb-4">
           자격증이 실력의 척도가 될 수는 없습니다. 하지만 관심과 꾸준함에 대한 척도는 될 수 있다고 생각합니다.
@@ -1133,14 +1133,14 @@
       </section>
       <!-- certificate 끝  -->
       <!-- contact 시작  -->
-      <section class="container pt mt" data-aos="fade-left" id="contact">
+      <section class="container pt mt fade-class" id="contact">
         <div class="row">
           <div class="col-lg-7 mx-auto text-center mb-5">
             <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">Contact</h2>
           </div>
         </div>
       </section>
-      <section class="container backimg" data-aos="fade-left">
+      <section class="container backimg fade-class">
         <div class="name-card d-flex justify-content-center">
           <div class="contact-body shadow">
             <div class="text-center mb-4">
@@ -1160,16 +1160,14 @@
                     <span>
                       <i class="bi bi-envelope"></i>
                       Email :
-                      <a href="mailto:gyeongseok.kang@gmail.com">
-                        <strong>gyeongseok.kang@gmail.com</strong>
-                      </a>
+                      <a class="fancy-link" href="mailto:gyeongseok.kang@gmail.com"> gyeongseok.kang@gmail.com </a>
                     </span>
                   </li>
                   <li>
                     <span>
                       <i class="bi bi-telephone-inbound"></i>
                       Phone :
-                      <a href="tel:010-6626-1491">
+                      <a class="fancy-link" href="tel:010-6626-1491">
                         <strong>010-6626-3321</strong>
                       </a>
                     </span>
@@ -1178,13 +1176,13 @@
                     <span>
                       <i class="bi bi-house-door"></i>
                       Blog :
-                      <a href="https://all-dev-kang.tistory.com/">
+                      <a class="fancy-link" href="https://all-dev-kang.tistory.com/">
                         <strong>Dev & Private blog</strong>
                       </a>
                     </span>
                   </li>
                 </ul>
-                <div class="contact-desc">“같이 일하고싶은 동료가 되겠습니다.”</div>
+                <div>“같이 일하고싶은 동료가 되겠습니다.”</div>
               </div>
             </div>
           </div>
@@ -1263,7 +1261,6 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="/js/scripts.js"></script>
+    <script src="/js/scripts.js" defer></script>
   </body>
 </html>
