--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
               <a class="nav-link click-alarm fancy-link" href="#certificate">Certificate</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link click-alarm fancy-link" href="#blog">Blog</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link click-alarm fancy-link" href="#contact">Contact</a>
             </li>
           </ul>
@@ -75,7 +78,6 @@
     <!-- Main 시작 -->
     <main>
       <!-- intro 시작 -->
-
       <section class="container pt mt fade-class" id="intro">
         <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">intro</h2>
         <div style="display: flex; justify-content: space-evenly; flex-wrap: wrap">
@@ -1132,6 +1134,20 @@
         </div>
       </section>
       <!-- certificate 끝  -->
+      <!-- blog 시작  -->
+      <section class="container pt mt fade-class" id="blog">
+        <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">Blog</h2>
+        <div class="section-desc fonsiz-sm color-basic-opac letsp-sm ws-xs mt-2 mb-4">
+          글을 쓰는 것을 즐깁니다. 공부한 것을 나누며, 취미를 기록하고 또 학습합니다.
+        </div>
+        <div class="card shadow">
+          <div class="card-body">
+            <iframe src="https://all-dev-kang.tistory.com/" width="100%" height="500px"></iframe>
+          </div>
+        </div>
+      </section>
+      <!-- blog 끝  -->
+
       <!-- contact 시작  -->
       <section class="container pt mt fade-class" id="contact">
         <div class="row">
