[New feature] award 관련 내용 추가
- 티맥스. 우수사원상 추가

--- a/index.html
+++ b/index.html
@@ -453,6 +453,60 @@
                   <tr>
                     <th class="table-title" scope="col">
                       2021<br />
+                      티맥스 표창장(우수사원) <br />
+                    </th>
+                    <td>
+                      <div>[티맥스]시각화 플랫폼, 통계 플랫폼 관련 업무로 인한 수상</div>
+                    </td>
+                    <td class="fonsiz-md letsp-sm fonwei-kr-md text-center color-basic-opac">우수사원상<br /></td>
+                    <td class="text-center">
+                      <span class="text-muted" data-bs-toggle="modal" data-bs-target="#Award_2021_2">
+                        <i class="bi bi-file-earmark-slides"></i>
+                      </span>
+                      <!-- Modal 시작 -->
+                      <div
+                        class="modal"
+                        id="Award_2021_2"
+                        tabindex="-1"
+                        aria-labelledby="Award_2021_2Label"
+                        aria-hidden="true"
+                      >
+                        <div class="modal-dialog">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <h5 class="modal-title" id="Award_2021_2Label">시상식 증빙 자료</h5>
+                              <button
+                                type="button"
+                                class="btn-close"
+                                data-bs-dismiss="modal"
+                                aria-label="Close"
+                              ></button>
+                            </div>
+                            <div class="modal-body">
+                              <img
+                                src="assets/img/award/tmaxAward2021.jpg"
+                                class="modal-img"
+                                alt=""
+                                style="width: 80%; height: 80%"
+                              />
+                              <p class="modal-desc">
+                                짧은 기간 안에 기존 업무(시각화 대시보드)외, 프로젝트(통계분석플랫폼)를 성공적으로
+                                구현하여 수상하였습니다.<br />( 2/600명 )
+                              </p>
+                            </div>
+                            <div class="modal-footer">
+                              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                              <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- Modal 끝 -->
+                    </td>
+                  </tr>
+                  <tr>
+                    <th class="table-title" scope="col">
+                      2021<br />
                       우리은행 온택트 공모전 <br />
                     </th>
                     <td>
