[New feature] 얼굴 사진에 원형으로 돌아가는 텍스트 기능

--- a/index.html
+++ b/index.html
@@ -100,17 +100,24 @@
             <span class="fonwei-en-xl letsp-md text-emphasis">완성된 개발자</span>가<br />
             되기 위해 오늘도 정진하고 있습니다.
           </div>
-          <img
-            style="
-              width: 300px;
-              height: 300px;
-              border-radius: 30px;
-              -moz-border-radius: 30px;
-              -khtml-border-radius: 30px;
-              -webkit-border-radius: 30px;
-            "
-            src="/assets/img/myface.jpg"
-          />
+          <div class="logo-circle">
+            <div class="logo-round">
+              <!-- <img
+                style="
+                  width: 300px;
+                  height: 300px;
+                  border-radius: 100%;
+                  -moz-border-radius: 100%;
+                  -khtml-border-radius: 100%;
+                  -webkit-border-radius: 100%;
+                "
+                src="/assets/img/myface.jpg"
+              /> -->
+            </div>
+            <div class="logo-text">
+              <p>KANG GYEONG SEOK - FrontEnd Developer</p>
+            </div>
+          </div>
         </div>
       </section>
       <!-- intro 끝 -->
