[New feature] wavy 텍스트 기능 및 텍스트 수정

--- a/index.html
+++ b/index.html
@@ -87,32 +87,21 @@
         <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">intro</h2>
         <div style="display: flex; justify-content: space-evenly; flex-wrap: wrap">
           <div class="section-desc fonsiz-ori color-basic-opac letsp-sm ws-xs mt-2 mb-4">
-            안녕하세요.
-            <span class="fonwei-en-xl letsp-md">FrontEnd</span> 개발자 강경석입니다. <br />
-            저는 19년도부터 일을 시작한<span class="fonwei-en-xl letsp-md">3년차</span>개발자입니다.
+            안녕하세요.<span class="fonwei-en-xl letsp-md text-emphasis">&nbsp강경석</span>입니다.  
             <br />
-            아이디어와 설계가 자연스럽고 탄탄하게 녹아있는 프로젝트를 만들고 싶은 개발자입니다.
+            친구들과 함께 창업한 것을 시작으로, 바쁘게 살고있는 3년차 개발자입니다.
             <br />
-            새로운 기술을 좋아하면서 가지고 있는 기술을 깊게 익히고 싶은 개발자입니다.
+            다양한 기술과 서비스로 새로운 서비스를 만드는 것을 좋아하며 
             <br />
-            <span class="fonwei-en-xl letsp-md text-emphasis">함께 일하고 싶은 동료</span>,
-            <span class="fonwei-en-xl letsp-md text-emphasis">신뢰받는 동료</span>,
-            <span class="fonwei-en-xl letsp-md text-emphasis">완성된 개발자</span>가<br />
-            되기 위해 오늘도 정진하고 있습니다.
+            그럼에도 깊게 공부하는 걸 추구하는 개발자이기도 합니다.
+            <br />
+            <span class="fonwei-en-xl letsp-md text-emphasis wavy">읽기 쉬운 코드를 쓰는 개발자</span>,&nbsp
+            <span class="fonwei-en-xl letsp-md text-emphasis wavy">사랑받는 서비스를 만들고 싶은 개발자</span>가
+            <br />
+            되고 싶어 오늘도 공부하고 있습니다.
           </div>
           <div class="logo-circle">
             <div class="logo-round">
-              <!-- <img
-                style="
-                  width: 300px;
-                  height: 300px;
-                  border-radius: 100%;
-                  -moz-border-radius: 100%;
-                  -khtml-border-radius: 100%;
-                  -webkit-border-radius: 100%;
-                "
-                src="/assets/img/myface.jpg"
-              /> -->
             </div>
             <div class="logo-text">
               <p>KANG GYEONG SEOK - FrontEnd Developer</p>
