--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
         <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">intro</h2>
         <div style="display: flex; justify-content: space-evenly; flex-wrap: wrap">
           <div class="section-desc fonsiz-ori color-basic-opac letsp-sm ws-xs mt-2 mb-4">
-            안녕하세요.<span class="fonwei-en-xl letsp-md text-emphasis">&nbsp강경석</span>입니다.  
+            안녕하세요.<span class="fonwei-en-xl letsp-md text-emphasis">&nbsp강경석</span>입니다.
             <br />
             친구들과 함께 창업한 것을 시작으로, 바쁘게 살고있는 3년차 개발자입니다.
             <br />
-            다양한 기술과 서비스로 새로운 서비스를 만드는 것을 좋아하며 
+            다양한 기술과 서비스로 새로운 서비스를 만드는 것을 좋아하며
             <br />
             그럼에도 깊게 공부하는 걸 추구하는 개발자이기도 합니다.
             <br />
@@ -101,8 +101,7 @@
             되고 싶어 오늘도 공부하고 있습니다.
           </div>
           <div class="logo-circle">
-            <div class="logo-round">
-            </div>
+            <div class="logo-round"></div>
             <div class="logo-text">
               <p>KANG GYEONG SEOK - FrontEnd Developer</p>
             </div>
@@ -1253,13 +1252,22 @@
                     <span>
                       <i class="bi bi-house-door"></i>
                       Blog :
-                      <a class="fancy-link" href="https://all-dev-kang.tistory.com/">
+                      <a class="fancy-link" href="https://all-dev-kang.tistory.com/category/%EA%B0%9C%EB%B0%9C">
                         <strong>Dev & Private blog</strong>
                       </a>
                     </span>
                   </li>
                 </ul>
                 <div>“같이 일하고싶은 동료가 되겠습니다.”</div>
+                <div class="text-center">
+                  <a href="https://github.com/gyeongseokKang"><img src="assets/brand/github.svg" /></a>
+                  <a href="https://www.linkedin.com/in/%EA%B2%BD%EC%84%9D-%EA%B0%95-5190751aa/"
+                    ><img src="assets/brand/linkedIn.svg"
+                  /></a>
+                  <a href="https://all-dev-kang.tistory.com/category/%EA%B0%9C%EB%B0%9C"
+                    ><img src="assets/brand/tistory-logo.svg"
+                  /></a>
+                </div>
               </div>
             </div>
           </div>
@@ -1267,13 +1275,6 @@
 
         <!-- footer 시작  -->
         <footer class="container mt-auto mb-5">
-          <div class="social-box text-center">
-            <a class="social-title" href="https://github.com/gyeongseokKang">GitHub</a>
-            <a class="social-title" href="https://all-dev-kang.tistory.com/">Blog</a>
-            <a class="social-title" href="https://www.linkedin.com/in/%EA%B2%BD%EC%84%9D-%EA%B0%95-5190751aa/"
-              >LinkedIn</a
-            >
-          </div>
           <div>
             <hr />
           </div>
