[Refactor] 내용 수정

--- a/index.html
+++ b/index.html
@@ -380,7 +380,11 @@
                   <tr>
                     <th class="table-title" scope="col">2년차</th>
                     <td>
-                      <div>Web App 마이크레이션</div>
+                      <div>Web App 마이크레이션, BI 플랫폼 고도화</div>
+                      <div>
+                        기존 자사 라이브러리와 프레임워크로 이뤄진 상용제품을 React, Wepback, Babel를 통한 마이그레이션
+                        작업
+                      </div>
                     </td>
                     <td class="text-center">
                       <div>
@@ -388,6 +392,7 @@
                         <img src="https://img.shields.io/badge/Typscript--grey?logo=typescript" />
                         <img src="https://img.shields.io/badge/react--grey?logo=react" />
                         <img src="https://img.shields.io/badge/mobx--grey?logo=mobx" />
+                        <img src="https://img.shields.io/badge/sass--grey?logo=sass" />
                       </div>
                     </td>
                   </tr>
@@ -395,10 +400,12 @@
                     <th class="table-title" scope="col">1년차</th>
                     <td>
                       <div>Web App(BI툴의 시각화 담당) 개발</div>
+                      <div>다양한 차트 라이브러리와 코드 최적화를 통한 데이터 분석 시각화 관련 작업</div>
                     </td>
                     <td class="text-center">
                       <div>
                         <img src="https://img.shields.io/badge/Javscript--grey?logo=javascript" />
+                        <img src="https://img.shields.io/badge/Top.js--grey?logo=top" />
                         <img src="https://img.shields.io/badge/Plotly.js--grey?logo=plotly" />
                         <img src="https://img.shields.io/badge/SunEditor--grey?logo=sunEditor" />
                         <img src="https://img.shields.io/badge/Tabulator--grey?logo=tabulator" />
@@ -409,6 +416,7 @@
                     <th class="table-title" scope="col">0년차</th>
                     <td>
                       <div>모빌리티 서비스 앱 개발</div>
+                      <div>공공API와 기업API를 이용한 통합 모빌리티 플랫폼</div>
                     </td>
                     <td class="text-center">
                       <div>
@@ -741,8 +749,8 @@
       <section class="container pt mt mb-5 fade-class" id="stacks">
         <h2 class="section-header fonsiz-xxxl fonwei-en-xxl letsp-sm text-upper color-basic">Stacks</h2>
         <div class="section-desc fonsiz-sm color-basic-opac letsp-sm ws-xs mt-2 mb-4">
-          T자형 지식을 추구합니다. 다만 지금은 수직, 수평적인 지식을 둘다 키워야하는 주니어로써 다양한 기술, 언어를
-          습득해 할 수 있는 경계선을 더 넓혀 나가고자 합니다.
+          T자형 지식을 추구합니다. 빠르게 발전하는 환경 속에게 서비스에 필요한 기술과 언어를 꾸준히 습득하여 실제
+          서비스에 적용하고자 할때 적절히 사용하고 싶습니다.
         </div>
         <div class="card shadow">
           <div class="card-body">
@@ -809,30 +817,6 @@
                     </td>
                   </tr>
                   <tr>
-                    <th scope="col" class="table-title letsp-md">Node.js</th>
-                    <td>
-                      <a href="https://ko.wikipedia.org/wiki/Node.js" target="_blank">
-                        <img src="/assets/img/stack/nodejs.svg" alt="Node.js Logo" />
-                      </a>
-                    </td>
-                    <td>
-                      <span class="ls-0">Node.js</span>로 <span class="ls-0">Express, Koa</span>등 웹 개발 프레임워크를
-                      구축할 수 있으며, <span class="ls-0">React</span>와 <span class="ls-0">MERN Stack</span> 방식으로
-                      조합하여 개발할 수 있습니다<br />
-                      <span class="ls-0">Handlebars, Liquid</span>와 같은 <span class="ls-0">Template Engine</span>을
-                      <span class="ls-0">View</span> 형태로 제공하여 구축하거나 서버 로깅 등을 할 수 있습니다
-                    </td>
-                    <td>
-                      <div class="star-icon text-center">
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star"></i>
-                        <i class="bi bi-star"></i>
-                      </div>
-                    </td>
-                  </tr>
-                  <tr>
                     <th scope="col" class="table-title letsp-md">React</th>
                     <td>
                       <a
@@ -843,9 +827,9 @@
                       </a>
                     </td>
                     <td>
-                      기본 레거시에서 React로 이식하는 작업으로 React를 접하고 현재에도 계속 사용중입니다. HOC부터
-                      StyledComponent 등을 적절히 조합하여 사용할 수 있으며 렌더링 이슈가 중요한 대용량 시각화 렌더링
-                      부분을 담당하며 역량을 키워나가고 있습니다.
+                      기본 레거시에서 React로 이식하는 작업으로 React를 접하고 현재에도 계속 사용중입니다. React를
+                      시작으로 다양한 라이브러리의 조합을 고려하고 시도해보며 프론트앤드 개발자로써 서비스를 개발하고
+                      있습니다. 또한 Jest와 Storybook를 이용한 테스트를 진행하며 완성도를 높이고 있습니다.
                     </td>
                     <td>
                       <div class="star-icon text-center">
